Added Folia Scheduler support and addex sendActionBar and sendTitle