@@ -1,5 +1,6 @@
 package me.mrbast.platform.util;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class LoreUtil {
@@ -8,6 +9,6 @@ public class LoreUtil {
 
 
     public static List<String> toLore(String formatted){
-        return List.of(formatted.split("\r?\n"));
+        return Arrays.asList(formatted.split("\r?\n"));
     }
 }
